# AutoMicro-Bot

./: .gitignore  README.md  project_audit_report.txt  project_documentation.txt
back-end/: .env.example  pyproject.toml  test_agent.py  test_gemini.py  test_ws.py
back-end/app/: main.py
back-end/app/config/: tool_permissions.json
back-end/app/db/: chroma.py  database.py
back-end/app/graph/: agent.py
back-end/app/graph/config/: tool_permissions.json
back-end/app/graph/tools/: browser_actions.py  excel_actions.py  file_actions.py  memory_actions.py  permission_manager.py  system_actions.py  terminal_executor.py
back-end/app/models/: schemas.py
back-end/app/routes/: chat.py  settings.py
back-end/data/chroma/: chroma.sqlite3
front-end/: index.html  package.json  vite.config.js
front-end/src/: App.jsx  index.css
front-end/src-tauri/: tauri.conf.json
front-end/src-tauri/capabilities/: default.json
front-end/src-tauri/icons/: icon.icns
front-end/src/api/: chat.js  settings.js
front-end/src/components/: BubbleView.jsx  ChatWindow.jsx  HistoryDrawer.jsx  InputBar.jsx  LoadingScreen.jsx  MessageBubble.jsx  SettingsDrawer.jsx  TerminalWindow.jsx  TitleBar.jsx
